--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,18 +81,16 @@ body {
     margin: 25px 0 10px 10px;
     top: 50px;
     position: absolute;
-    line-height: 1;
+    line-height: 0.81;
 }
 
-.displayyli {
+.displayli {
     margin: 10px auto 10px 10px;
     text-align: left;
-    background: linear-gradient(rgb(88, 58, 38), rgb(100, 69, 2));
+    background: linear-gradient(rgb(114, 82, 23), rgb(207, 130, 57));
     border-radius: 10px;
-    padding: 10px;
+    padding: 10px 10px 12px;
     color: #fff;
-    border: 10px;
-    border: 2px solid rgb(83, 107, 116);
     width: 40%;
     list-style: none;
 }
@@ -101,7 +99,7 @@ body {
     text-align: left;
     background: linear-gradient(rgb(43, 99, 109), rgb(26, 161, 155));
     margin: 10px 10px 10px auto;
-    padding: 10px 10px;
+    padding: 10px 10px 12px;
     border-radius: 10px;
     color: #fff;
     width: 40%;
