--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,8 @@ header img {
 }
 
 body {
+    height: 200px;
+    width: 200px;
     background-image: url('/../img/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -54,7 +56,7 @@ body {
     padding-left: 30px;
     background: rgb(81, 83, 83);
     padding: 10px;
-    width: 85%;
+    width: 65%;
     border-radius: 25px;
     -webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;
@@ -75,7 +77,7 @@ body {
 #displayChat {
     color: #fff;
     padding: 10px 0 0 10px;
-    height: calc(100vh - 138px);
+    height: calc(100vh - 178px);
     width: calc(100% - 20px);
     overflow-y: scroll;
     margin: 25px 0 10px 10px;
