--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ body {
     padding-left: 30px;
     background: rgb(81, 83, 83);
     padding: 5px;
-    width: 75%;
+    width: 280px;
     border-radius: 25px;
     -webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;
