--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,33 @@ body {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    outline: 1px solid slategrey;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .displayli {
     margin: 10px auto 10px 10px;
     text-align: left;
@@ -99,6 +126,7 @@ body {
     color: #fff;
     width: 40%;
     list-style: none;
+    overflow-x: hidden;
 }
 
 p {
@@ -117,4 +145,5 @@ p {
     color: #fff;
     width: 40%;
     list-style: none;
+    overflow-x: hidden;
 }
