--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,7 +133,7 @@ p {
     margin-bottom: 0rem !important;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-size: 1.2em;
-    overflow-x: hidden;
+    word-wrap: break-word;
 }
 
 .ownli {
@@ -145,5 +145,5 @@ p {
     color: #fff;
     width: 40%;
     list-style: none;
-    overflow-x: hidden;
+    word-wrap: break-word;
 }
