--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 header {
+    text-align: left;
     background: linear-gradient(rgb(43, 99, 109), rgb(26, 161, 155));
     border-radius: 25px;
     height: 55px;
@@ -24,6 +25,12 @@ header img {
     width: 75px;
 }
 
+#online.modal.open {
+    display: block;
+    opacity: 1;
+    width: 50%;
+}
+
 body {
     background-position: top 0;
     background-image: url('/../img/background.jpg');
@@ -42,6 +49,7 @@ body {
     display: block;
     margin-top: 0em;
     background: rgb(32, 32, 32);
+    border-color: rgb(32, 32, 32);
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -122,7 +130,7 @@ body {
     text-align: left;
     background: linear-gradient(rgb(114, 74, 23), rgb(214, 161, 61));
     border-radius: 10px;
-    padding: 10px 10px 12px;
+    padding: 15px 20px 20px 20px;
     color: #fff;
     width: 40%;
     list-style: none;
@@ -130,6 +138,7 @@ body {
 }
 
 p {
+    margin-top: 0;
     margin-bottom: 0rem !important;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-size: 1.2em;
@@ -139,8 +148,8 @@ p {
 .ownli {
     text-align: left;
     background: linear-gradient(rgb(43, 99, 109), rgb(26, 161, 155));
-    margin: 10px 10px 10px auto;
-    padding: 10px 10px 12px;
+    margin: 1px 10px -4px auto;
+    padding: 15px 20px 20px 20px;
     border-radius: 10px;
     color: #fff;
     width: 40%;
