--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ header {
 header p {
     padding: 10px 0 0 25px;
     font-size: 18px;
+    max-width: 35em;
     vertical-align: top;
     display: inline-block;
 }
@@ -126,7 +127,7 @@ body {
 }
 
 .displayli {
-    margin: 10px auto 10px 10px;
+    margin: 10px auto -4px 10px;
     text-align: left;
     background: linear-gradient(rgb(114, 74, 23), rgb(214, 161, 61));
     border-radius: 10px;
