--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 header {
     text-align: left;
-    background: linear-gradient(rgb(43, 99, 109), rgb(26, 161, 155));
+    background: linear-gradient(rgb(54, 118, 179), rgb(73, 122, 228), rgb(54, 118, 179));
     height: 55px;
     width: 100%;
     border: 2px solid #062033;
